# cargo-linked

./: .drone.yml  Cargo.toml  README.md
src/: app.rs  ldd.rs  main.rs  main_test.rs  pacman.rs
