[package]
name = "cargo-linked"
description = "List linked packages for a rust binary"
license = "GPL-3.0"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.1"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
repository = "https://github.com/JojiiOfficial/cargo-linked"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["ldd","linking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.2.0"
cargo_metadata = "0.11.4"
structopt = "0.3.20"
